Fixes display issue of nav on IE11

--- a/assets/scss/jellyfish/06-objects/_grid.scss
+++ b/assets/scss/jellyfish/06-objects/_grid.scss
@@ -38,27 +38,26 @@ $loop_count: 1;
     // if a breakpoint is found, set media query min-width
     .container {
       // give our container a width/max width, and padding to border content
-      width: map-deep-get($breakpoints, $point, "container-width");
-      max-width: map-deep-get($breakpoints, $point, "container-max-width");
-      padding-left: map-deep-get($breakpoints, $point, "container-gutter");
-      padding-right: map-deep-get($breakpoints, $point, "container-gutter");
+      width: map-deep-get($breakpoints, $point, 'container-width');
+      max-width: map-deep-get($breakpoints, $point, 'container-max-width');
+      padding-left: map-deep-get($breakpoints, $point, 'container-gutter');
+      padding-right: map-deep-get($breakpoints, $point, 'container-gutter');
     }
 
     .row {
       // give our rows negative margin equal to half col gutter
-      margin-left: -0.5 * (map-deep-get($breakpoints, $point, "col-gutter"));
-      margin-right: -0.5 * (map-deep-get($breakpoints, $point, "col-gutter"));
+      margin-left: -0.5 * (map-deep-get($breakpoints, $point, 'col-gutter'));
+      margin-right: -0.5 * (map-deep-get($breakpoints, $point, 'col-gutter'));
     }
 
     .col {
       // give our cols l-r margin equal to half col gutter
-      padding-left: 0.5 * map-deep-get($breakpoints, $point, "col-gutter");
-      padding-right: 0.5 * map-deep-get($breakpoints, $point, "col-gutter");
+      padding-left: 0.5 * map-deep-get($breakpoints, $point, 'col-gutter');
+      padding-right: 0.5 * map-deep-get($breakpoints, $point, 'col-gutter');
       @if $loop_count == 1 {
         max-width: 100%;
-        flex: 1
-          1
-          0px; // Ensures that if there are no breakpoint settings defined, columns fill available space on the row
+        // Ensures that if there are no breakpoint settings defined, columns fill available space on the row
+        flex: 1 1 0px;
       }
     }
   }
